finishing hero and about section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,122 @@
     <title>Rou - Work Smartly with Endless Possibility</title>
   </head>
   <body>
+    <!-- header -->
+    <header>
+      <div class="container flex-row">
+        <div class="header__logo">
+          <img src="assets/img/logo.png" alt="logo" />
+        </div>
+        <nav>
+          <ul class="header__menu flex-row">
+            <li><a href="#hero">Hero</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+        <div class="right flex-center">
+          <a href="#contact" class="btn btn-secondary">keep in touch</a>
+          <div class="menu-btn">
+            <i class="fas fa-bars"></i>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <!-- hero section -->
+
+    <section id="hero" class="container flex-row">
+      <div class="hero__content">
+        <h1 class="title">Work smart with Endless possibilities</h1>
+        <p class="text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore sit,
+          dignissimos dolorem recusandae.
+        </p>
+        <a href="" class="btn btn-primary">get started</a>
+      </div>
+      <div class="hero__img">
+        <img src="assets/img/hero.png" alt="hero" />
+      </div>
+    </section>
+
+    <!-- about section -->
+    <section id="about" class="container flex-center flex-column">
+      <h1 class="section-subheading">build trust first</h1>
+      <h2 class="section-heading text-center">
+        control your business with single click
+      </h2>
+      <div class="features text-center">
+        <div class="feature">
+          <div class="feature__icon">
+            <i class="fas fa-anchor"></i>
+          </div>
+          <h3 class="feature__title">complete business control</h3>
+          <p class="feature__text">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto
+            consequuntur cum sed, illum reprehenderit reiciendis, saepe facere,
+            ex magni totam eligendi quaerat minus molestias distinctio fuga.
+            Illum earum eum perspiciatis?
+          </p>
+        </div>
+        <div class="feature">
+          <div class="feature__icon">
+            <i class="fa-regular fa-file-lines"></i>
+          </div>
+          <h3 class="feature__title">critical analytics and report</h3>
+          <p class="feature__text">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto
+            consequuntur cum sed, illum reprehenderit reiciendis, saepe facere,
+            ex magni totam eligendi quaerat minus molestias distinctio fuga.
+            Illum earum eum perspiciatis?
+          </p>
+        </div>
+        <div class="feature">
+          <div class="feature__icon">
+            <i class="fas fa-sack-dollar"></i>
+          </div>
+          <h3 class="feature__title">save money</h3>
+          <p class="feature__text">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto
+            consequuntur cum sed, illum reprehenderit reiciendis, saepe facere,
+            ex magni totam eligendi quaerat minus molestias distinctio fuga.
+            Illum earum eum perspiciatis?
+          </p>
+        </div>
+        <!-- <div class="feature">
+          <div class="feature__icon">
+            <i class="fas fa-chart-line"></i>
+          </div>
+          <h3 class="feature__title">business growth</h3>
+          <p class="feature__text">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto
+            consequuntur cum sed, illum reprehenderit reiciendis, saepe facere,
+            ex magni totam eligendi quaerat minus molestias distinctio fuga.
+            Illum earum eum perspiciatis?
+          </p>
+        </div> -->
+      </div>
+      <div class="about__details flex-center">
+        <div class="about__details-content">
+          <h1>Most creative team</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id aut
+            expedita eaque consequuntur distinctio qui natus explicabo, illum
+            dolorem sint est perspiciatis non doloremque enim facilis delectus,
+            architecto obcaecati velit.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam hic
+            soluta, quasi veniam dolorum natus dicta ipsa saepe obcaecati
+          </p>
+          <a href="#" class="btn btn-primary"> get started </a>
+        </div>
+        <div class="about__details-img">
+          <img src="assets/img/about.png" alt="about" />
+        </div>
+      </div>
+    </section>
 
     <script src="js/fontawesome.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
