adding services and team section

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <li><a href="#about">About</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#projects">Projects</a></li>
+            <li><a href="#team">team</a></li>
+
             <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
@@ -128,6 +130,176 @@
       </div>
     </section>
 
+    <!-- services section -->
+    <section id="services">
+      <div class="container">
+        <h5 class="section-subheading">what we do</h5>
+        <h2 class="section-heading right">
+          services to slove all kind of buisiness problems
+        </h2>
+        <div class="services">
+          <div class="service">
+            <div class="service__icon">
+              <img src="assets/img/squares.png" alt="square " />
+            </div>
+            <h3 class="service__title">Buisness Automation</h3>
+            <p class="service__text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            </p>
+            <div class="arrow-icon">
+              <i class="fas fa-arrow-right"></i>
+            </div>
+          </div>
+          <div class="service">
+            <div class="service__icon">
+              <img src="assets/img/shopping-cart.png" alt="square " />
+            </div>
+            <h3 class="service__title">Ecommerce support</h3>
+            <p class="service__text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            </p>
+            <div class="arrow-icon">
+              <i class="fas fa-arrow-right"></i>
+            </div>
+          </div>
+          <div class="service">
+            <div class="service__icon">
+              <img src="assets/img/video-camera.png" alt="square " />
+            </div>
+            <h3 class="service__title">video production</h3>
+            <p class="service__text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            </p>
+            <div class="arrow-icon">
+              <i class="fas fa-arrow-right"></i>
+            </div>
+          </div>
+          <div class="service">
+            <div class="service__icon">
+              <img src="assets/img/headphones.png" alt="square " />
+            </div>
+            <h3 class="service__title">Realtime support</h3>
+            <p class="service__text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            </p>
+            <div class="arrow-icon">
+              <i class="fas fa-arrow-right"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="projects">
+      <div class="container">
+        <h5 class="section-subheading">our projects</h5>
+        <h2 class="section-heading">check the real Problem solving</h2>
+        <div class="projects">
+          <div class="project">
+            <div class="project__img">
+              <img src="assets/img/project-1.png" alt="project1" />
+            </div>
+            <div class="project__content">
+              <h3 class="project__category">Development</h3>
+              <h3 class="project__title">Lorem ipsum dolor sit amet.</h3>
+              <p class="project__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+                sit sunt ab similique consectetur nemo alias neque quaerat quas
+                eveniet, ex cum mollitia? Obcaecati voluptatibus debitis
+                inventore labore architecto eos?
+              </p>
+              <a href="#" class="btn btn-secondary">View details</a>
+            </div>
+          </div>
+          <div class="project">
+            <div class="project__img">
+              <img src="assets/img/project-2.png" alt="project1" />
+            </div>
+            <div class="project__content">
+              <h3 class="project__category">Development</h3>
+              <h3 class="project__title">Lorem ipsum dolor sit amet.</h3>
+              <p class="project__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+                sit sunt ab similique consectetur nemo alias neque quaerat quas
+                eveniet, ex cum mollitia? Obcaecati voluptatibus debitis
+                inventore labore architecto eos?
+              </p>
+              <a href="#" class="btn btn-secondary">View details</a>
+            </div>
+          </div>
+          <div class="project">
+            <div class="project__img">
+              <img src="assets/img/project-3.png" alt="project1" />
+            </div>
+            <div class="project__content">
+              <h3 class="project__category">Development</h3>
+              <h3 class="project__title">Lorem ipsum dolor sit amet.</h3>
+              <p class="project__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+                sit sunt ab similique consectetur nemo alias neque quaerat quas
+                eveniet, ex cum mollitia? Obcaecati voluptatibus debitis
+                inventore labore architecto eos?
+              </p>
+              <a href="#" class="btn btn-secondary">View details</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Team section -->
+    <section id="team" class="container">
+      <h5 class="section-subheading text-center">meet our team</h5>
+      <h2 class="section-heading right left text-center">
+        awesome people with great skills
+      </h2>
+      <div class="members">
+        <div class="member">
+          <div class="member__img">
+            <img src="assets/img/member-1.png" alt="member" />
+          </div>
+          <div class="member__content">
+            <h1>sam smith</h1>
+            <p>web developer</p>
+          </div>
+        </div>
+        <div class="member">
+          <div class="member__img">
+            <img src="assets/img/member-2.png" alt="member" />
+          </div>
+          <div class="member__content">
+            <h1>sam smith</h1>
+            <p>web developer</p>
+          </div>
+        </div>
+        <div class="member">
+          <div class="member__img">
+            <img src="assets/img/member-3.png" alt="member" />
+          </div>
+          <div class="member__content">
+            <h1>sam smith</h1>
+            <p>web developer</p>
+          </div>
+        </div>
+        <div class="member">
+          <div class="member__img">
+            <img src="assets/img/member-4.png" alt="member" />
+          </div>
+          <div class="member__content">
+            <h1>sam smith</h1>
+            <p>web developer</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- contact -->
+    <section id="contact">
+      <div class="container">
+        <div class="section-subheading">contact</div>
+        <div class="section-heading">contact with us by different ways</div>
+      </div>
+    </section>
     <script src="js/fontawesome.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/script.js"></script>
