finishing footer and adding media queries

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
             <li><a href="#services">Services</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#team">team</a></li>
-
             <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
@@ -296,10 +295,125 @@
     <!-- contact -->
     <section id="contact">
       <div class="container">
-        <div class="section-subheading">contact</div>
-        <div class="section-heading">contact with us by different ways</div>
+        <div class="section-subheading text-center">contact</div>
+        <div class="section-heading text-center left right">
+          contact with us by different ways
+        </div>
+        <div class="contact">
+          <form action="" class="contact__form">
+            <h1>write your message</h1>
+            <input type="text" placeholder="your name" required />
+            <input type="email" placeholder="your email" required />
+            <input type="text" placeholder="subject" required />
+            <textarea rows="5" required>your message</textarea>
+            <button class="btn btn-primary">message</button>
+          </form>
+          <div class="contact__details">
+            <p class="text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
+              facilis, debitis neque ullam veniam non!
+            </p>
+            <div class="details">
+              <div class="detail">
+                <div class="detail__icon">
+                  <i class="fas fa-phone"></i>
+                </div>
+                <div class="detail__content">
+                  <h3>phone</h3>
+                  <p>+989391219504</p>
+                </div>
+              </div>
+              <div class="detail">
+                <div class="detail__icon">
+                  <i class="fas fa-envelope"></i>
+                </div>
+                <div class="detail__content">
+                  <h3>Email</h3>
+                  <p>amir.hj1998620@gmail.com</p>
+                </div>
+              </div>
+              <div class="detail">
+                <div class="detail__icon">
+                  <i class="fas fa-map-marked-alt"></i>
+                </div>
+                <div class="detail__content">
+                  <h3>Location</h3>
+                  <p>Tabriz, Iran</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
+
+    <footer id="footer">
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__details">
+            <div class="footer__logo">
+              <img src="assets/img/logo.png" alt="logo" />
+            </div>
+            <p class="footer__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+              repellendus sapiente ut ipsa unde, cumque rerum error voluptatum
+              voluptatibus sint similique tempora recusandae alias delectus modi
+              quo reprehenderit natus impedit!
+            </p>
+            <div class="footer__newsletter">
+              <form action="" class="footer__newsletter-form">
+                <input type="email" placeholder="submit email" required />
+                <div class="icon">
+                  <i class="fa fa-envelope"></i>
+                </div>
+              </form>
+            </div>
+          </div>
+          <div class="footer__menu">
+            <h3 class="footer__menu-title">links</h3>
+            <ul class="footer__menu-list">
+              <li><a href="#hero">Hero</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#services">Services</a></li>
+              <li><a href="#projects">Projects</a></li>
+              <li><a href="#team">team</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div>
+          <div class="footer__menu">
+            <h3 class="footer__menu-title">services</h3>
+            <ul class="footer__menu-list">
+              <li><a href="#">Development</a></li>
+              <li><a href="#">Maintance</a></li>
+              <li><a href="#">Design</a></li>
+            </ul>
+          </div>
+          <div class="footer__menu">
+            <h3 class="footer__menu-title">social</h3>
+            <ul class="footer__menu-list">
+              <li><a href="#">Facebook</a></li>
+              <li><a href="#">Telgram</a></li>
+              <li><a href="#">Instagram</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer__bottom">
+          <div class="footer__bottom-icons">
+            <p>Follow Us</p>
+            <a href="#" class="facebook">
+              <i class="fab fa-facebook"></i>
+            </a>
+            <a href="#" class="telegram">
+              <i class="fab fa-telegram"></i>
+            </a>
+            <a href="#" class="instagram">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </div>
+          <p>&copy; 2023 ROU, all rights reserved</p>
+        </div>
+      </div>
+    </footer>
     <script src="js/fontawesome.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/script.js"></script>
